[package]
name = "corrode"
version = "0.1.0"
authors = [
  "Jamey Sharp <jamey@minilop.net>",
  "Tim Ryan <tim@timryan.org>",
  "Paul Collier <paul@paulcollier.ca>"
]
description = "C to Rust Translator (ported from Haskell)."
repository = "http://github.com/tcr/corrode-but-in-rust"
homepage = "http://github.com/tcr/corrode-but-in-rust"
license = "GPL-2.0"

[dependencies]
num = "0.1"
num-derive = "0.1"
matches = "0.1.6"
lazy_static = "0.2"
maplit = "*"
parser-c = "0.3"
support-map = { path = "support-map" }